--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id minus possimus ab voluptas assumenda culpa ad vel
-        similique atque velit nobis sapiente nihil vitae deserunt iusto quia inventore, sed quibusdam!</h1>
-</body>
+  <body style="background-color: #222; color: #ddd">
+    <h1>Primeiro Site</h1>
 
+    <p style="color: rgb(15, 231, 15)">Um</p>
+    <p style="color: rgba(19, 221, 36, 0.502)">Dois</p>
+    <p style="color: #0b70f5">Três</p>
+
+  </body>
 </html>
