--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 
   <body style="background-color: #222; color: #ddd">
     <h1>Primeiro Site</h1>
+    
+    <h1>Cookies</h1>
+    <img src="cookies.jpg" alt="Cookies" width="101" height="100" >
 
     <p style="color: rgb(15, 231, 15)">Um</p>
     <p style="color: rgba(19, 221, 36, 0.502)">Dois</p>
     <p style="color: #0b70f5">Três</p>
-
+    
   </body>
 </html>
