--- a/index.html
+++ b/index.html
@@ -32,5 +32,10 @@
       <li>Item#1</li>
       <li>Item#1</li>
     </ol>
+
+    <h1>Links</h1>
+    <a href="https://google.com" target="_blank">Google</a>
+    <br>
+    <a href="pageTwo.html">Ir para a pagina 2</a>
   </body>
 </html>
