--- a/pageTwo.html
+++ b/pageTwo.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pagina 2</title>
-</head>
-<body>
-    <h1>Pagina 2</h1>
-    <a href="index.html">Voltar</a>
-</body>
+
+    <style>
+      li {
+        margin: 1rem;
+      }
+    </style>
+  </head>
+  <body
+    style="
+      background-color: #222;
+      color: #ddd;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-size: 1.2rem;
+    "
+  >
+    <a href="index.html" style="color: white">Voltar</a>
+
+    <h1>Cookies</h1>
+    <img
+      style="border: 2px solid white; border-radius: 10px"
+      src="https://static.itdg.com.br/images/640-400/c850a535e8de2a4793622a50a858a6d3/shutterstock-1488059969.jpg"
+      alt="Cookies"
+      width="500"
+      height="300"
+    />
+
+    <div
+      style="
+        display: grid;
+        grid-template-columns: 500px 500px;
+        justify-content: center;
+      "
+    >
+      <div style="display: flex; flex-direction: column; align-items: center">
+        <h1>Ingredientes</h1>
+        <ul>
+          <li>125g de manteiga sem sal</li>
+          <li>3/4 xícara de açúcar</li>
+          <li>1 ovo</li>
+          <li>1 e 3/4 de xícara de farinha de trigo</li>
+          <li>1 colher (chá) de fermento em pó</li>
+          <li>300g de chocolate meio amargo picado</li>
+          <li>1/4 xícara de chocolate em pó</li>
+        </ul>
+      </div>
+
+      <div style="display: flex; flex-direction: column; align-items: center">
+        <h1>Modo de Preparo</h1>
+        <ol>
+          <li>
+            Misture a manteiga, açúcar mascavo, açúcar, essência de baunilha (e
+            chocolate em pó, se for fazer cookies com base de chocolate).
+          </li>
+          <li>Adicione o ovo batido aos poucos e misture bem.</li>
+          <li>
+            Acrescente a farinha aos poucos e misture bem (pode ser na mão ou na
+            batedeira planetária)
+          </li>
+          <li>
+            Por último, adicione o fermento e misture só para incorporá-lo à
+            massa.
+          </li>
+          <li>Depois da massa bem misturada, adicione o chocolate picado.</li>
+          <li>
+            Forme bolinhas pequenas e asse em forno preaquecido, sobre papel
+            manteiga, por aproximadamente 15 a 20 minutos (250° C).
+          </li>
+        </ol>
+      </div>
+    </div>
+  </body>
 </html>
