--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="index.css">
   <title>Document</title>
 </head>
 
-<body style="background-color: #222; color: #ddd">
+<body style="background-color: #222; color: #ddd; margin-bottom: 10rem;">
 
 
   <p style="color: rgb(15, 231, 15)">Um</p>
@@ -60,6 +61,43 @@
     <br>
     <input type="radio" id="3" name="temp">
     <label for="2">Normal</label>
+  </div>
+
+  <div>
+    <h1 style="margin-top: 2rem; margin-bottom: 0">Tabela</h1>
+
+    <table>
+      <thead>
+        <tr>
+          <th colspan="5">Alunos</th>
+        </tr>
+        <tr>
+          <th>Nº</th>
+          <th>Matricula</th>
+          <th>Nome</th>
+          <th>Curso</th>
+          <th>Assinatura</th>
+        </tr>
+      </thead>
+      <tbody>
+
+        <tr>
+          <td>1</td>
+          <td>894699</td>
+          <td>André Luiz</td>
+          <td>Computação</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>2</td>
+          <td>895023</td>
+          <td>Rafael de Oliveira</td>
+          <td>Computação</td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </body>
 
