--- a/Formulario/index.html
+++ b/Formulario/index.html
@@ -7,7 +7,45 @@
 </head>
 
 <body>
-    <h1>Tabela</h1>
+    <div class="form">
+        <div class="campo">
+            <label for="nome">Nome</label>
+            <input type="text" id="nome">
+        </div>
+
+        <div class="campo">
+            <label for="idade">Idade</label>
+            <input type="number" id="idade">
+        </div>
+
+        <div class="campos">
+            <input id="op1" type="radio" name="status" checked>
+            <label for="op1">Estudante</label>
+
+            <input type="radio" name="status" id="op2">
+            <label for="op2">Formado</label>
+        </div>
+
+        <button>Adicionar</button>
+    </div>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Idade</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <th>Rafael</th>
+                <th>25</th>
+                <th>Estudante</th>
+            </tr>
+        </tbody>
+    </table>
 </body>
 
 </html>
