--- a/Vampire/index.html
+++ b/Vampire/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vampire</title>
 </head>
+
 <body>
     <canvas></canvas>
-    <script></script>
+
+    <script>
+        const canvas = document.querySelector("canvas");
+        const ctx = canvas.getContext("2d");
+
+        canvas.width = 1024;
+        canvas.height = 720;
+
+        let x = canvas.width / 2;
+        let y = canvas.height / 2;
+
+        function animation() {
+            requestAnimationFrame(animation)
+
+            ctx.fillStyle = "black";
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+            ctx.fillStyle = "blue";
+            ctx.fillRect(x, y, 50, 50);
+
+            if ( y < canvas.height - 50) 
+                y += 10;
+        }
+
+        animation();
+    </script>
 </body>
+
 </html>
